--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.6",
+    "@astrojs/node": "^8.2.5",
+    "@astrojs/db": "^0.9.8",
     "@astrojs/tailwind": "^5.1.0",
+    "@auth/core": "^0.18.6",
     "@midudev/tailwind-animations": "^0.0.7",
-    "astro": "^4.4.5",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
+    "astro": "^4.5.12",
+    "auth-astro": "^4.1.1",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.3"
   },
   "extends": "standard"
 }
