--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.6",
-    "@astrojs/node": "^8.2.5",
+    "@astrojs/cloudflare": "^10.0.2",
     "@astrojs/db": "^0.9.8",
+    "@astrojs/node": "^8.2.5",
     "@astrojs/tailwind": "^5.1.0",
     "@auth/core": "^0.18.6",
     "@midudev/tailwind-animations": "^0.0.7",
