--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
 	},
 	"dependencies": {
 		"@astrojs/cloudflare": "^10.0.2",
-		"@astrojs/db": "^0.9.8",
-		"astro": "^4.5.16",
-    "@auth/core": "^0.18.6",
-		"auth-astro": "^4.1.1"
+		"astro": "^4.5.16"
 	},
 	"devDependencies": {
 		"@astrojs/check": "^0.5.10",
