--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"@astrojs/tailwind": "^5.1.0",
 		"@midudev/tailwind-animations": "^0.0.7",
 		"tailwindcss": "^3.4.3",
-		"typescript": "^5.4.4"
+		"typescript": "^5.4.4",
+		"wrangler": "^3.48.0"
 	},
 	"extends": "standard"
 }
