--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 	},
 	"dependencies": {
 		"@astrojs/vercel": "^7.5.2",
-		"astro": "^4.5.16"
+		"@auth/core": "^0.18.6",
+		"astro": "^4.5.16",
+		"auth-astro": "^4.1.1"
 	},
 	"devDependencies": {
 		"@astrojs/check": "^0.5.10",
