--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
 	"version": "0.0.2",
 	"scripts": {
 		"dev": "astro dev",
-		"start": "astro dev",
-		"build": "astro check && astro build",
+		"start": "astro dev --remote",
+		"build": "astro check && astro build --remote",
 		"preview": "astro preview",
 		"astro": "astro"
 	},
 	"dependencies": {
+		"@astrojs/db": "^0.10.4",
 		"@astrojs/vercel": "^7.5.2",
 		"@auth/core": "^0.18.6",
 		"astro": "^4.5.16",
