--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@astrojs/db": "^0.10.4",
 		"@astrojs/vercel": "^7.5.2",
 		"@auth/core": "^0.18.6",
+		"@vercel/speed-insights": "^1.0.10",
 		"astro": "^4.5.16",
 		"auth-astro": "^4.1.1"
 	},
