--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,12 @@
 {
 	"editor.defaultFormatter": "dbaeumer.vscode-eslint",
-	"[astro]": {
-		"editor.defaultFormatter": "astro-build.astro-vscode"
-	},
 	"editor.lightbulb.enabled": "off",
 	"prettier.semi": false,
 	"prettier.singleQuote": true,
 	"prettier.singleAttributePerLine": true,
 	"prettier.useTabs": true,
-	"prettier.printWidth": 80
+	"prettier.printWidth": 80,
+	"[astro]": {
+		"editor.defaultFormatter": "astro-build.astro-vscode"
+	}
 }
