--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,4 @@
 name = "eira"
-
-[vars]
+pages_build_output_dir = "./dist"
+compatibility_date = "2024-05-04"
+compatibility_flags = ["nodejs_compat"]
