--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 		"@astrojs/check": "^0.5.10",
 		"@astrojs/cloudflare": "^10.2.4",
 		"@astrojs/tailwind": "^5.1.0",
+		"@auth/core": "^0.18.6",
 		"astro": "^4.7.0",
+		"auth-astro": "^4.1.1",
 		"tailwindcss": "^3.4.3",
 		"typescript": "^5.4.5"
 	},
